Added Card to Transaction view
Added card header and card body to transaction body. Filled body with dummy data to show how it populates.

--- a/BudgetApp/style.css
+++ b/BudgetApp/style.css
@@ -58,3 +58,13 @@ body {
 	position: relative;
 	top: 5px;
 }
+
+#transHeader {
+	position: relative;
+	top: 20px;
+}
+
+#pencil {
+	background-color: transparent;
+	border: 1px solid transparent;
+}
