--- a/BudgetApp/style.css
+++ b/BudgetApp/style.css
@@ -68,3 +68,9 @@ body {
 	background-color: transparent;
 	border: 1px solid transparent;
 }
+
+#notextwrap {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
